--- a/css/css.css
+++ b/css/css.css
@@ -1,77 +1,85 @@
 html,
 body {
-width: 100%;
-height: 100%;
-margin: 0;
-padding: 0;
-overflow: hidden;
-}
-#canvas {
-width: 100%;
-height: 100%;
-display: block;
-}
-#modelPanel {
-position: absolute;
-top: 0;
-left: 0;
-width: 200px;
-height: 100%;
-background-color: rgba(255, 255, 255, 0.8);
-overflow-y: scroll;
-padding: 10px;
-}
-.modelItem {
-padding: 5px;
-cursor: move;
-}
-#dialog{
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    padding: 20px;
-    border: 1px solid black;
-}
-#deleteButton{
-    display: none; 
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
-#exportButton{
-    position: fixed; top: 10px; right: 10px
+#canvas {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
+
+#modelPanel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 200px;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  overflow-y: scroll;
+  padding: 10px;
+}
+
+.modelItem {
+  padding: 5px;
+  cursor: move;
+}
+
+#dialog {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border: 1px solid black;
+}
+
+#deleteButton {
+  display: none;
+}
+
+#exportButton {
+  position: fixed;
+  top: 10px;
+  right: 10px
+}
+
 .btn-box {
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .icon-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    padding: 8px 12px;
-    margin-bottom: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .icon-btn i {
-    margin-right: 5px;
-  }
-  
-  .icon-btn:hover {
-    background-color: #0056b3;
-  }
-  
-  .icon-btn:active {
-    background-color: #004085;
-  }
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.icon-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 8px 12px;
+  margin-bottom: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.icon-btn i {
+  margin-right: 5px;
+}
+
+.icon-btn:hover {
+  background-color: #0056b3;
+}
+
+.icon-btn:focus {
+  background-color: #0d0d47;
+}
